# healthsage-ai-llm

./: Inference_Note_to_Fhir_on_LLama_2_13b.ipynb  Quality inspection.ipynb  README.md  inference-note-to-fhir-colab-notebook.ipynb  pyproject.toml  requirements.txt
demo/app/: Dockerfile
docs/: evaluation.ipynb  evaluation.md  inference-note-to-fhir-colab-notebook.ipynb  inference_note_to_fhir_colab_notebook.ipynb
note-to-fhir/: data_utils.py  fhir_client.py  parsers.py
note-to-fhir/evaluation/: run_evaluation.py
note-to-fhir/inference/: score.py
note-to-fhir/templates/: simple.py
scripts/: run_evaluation.py  run_visualization.py
src/healthsageai/note_to_fhir/: data_utils.py  parsers.py
src/healthsageai/note_to_fhir/evaluation/: datamodels.py  fhirmodels.py  utils.py  visuals.py
src/healthsageai/note_to_fhir/inference/: __init__.py  note_to_fhir.py
src/note-to-fhir/: data_generation.py  inference.py
src/note_to_fhir/: data_utils.py
src/note_to_fhir/evaluation/: dataclasses.py  datamodels.py  fhirmodels.py  measures.py  resources.py  run_evaluation.py  utils.py  visuals.py
src/note_to_fhir/inference/: __init__.py  note_to_fhir.py  score.py
src/note_to_fhir/templates/: complex.py  simple.py
starter-kit/: docker-compose.yml
tests/note_to_fhir/: test_evaluation.py  test_postprocessing.py
