[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthsageai"
version = "0.1.6"
description = "HealthSage AI LLMs, Healthcare genAI platform"
readme = "README.md"

requires-python = ">=3.9"

license = {file = "LICENSE"}

keywords = ["NLP", "machine learning", "pytorch", "fhir", "llm", "llama", "mixtral", "IE", "genAI"]

authors = [
  {name = "HealthSage AI", email = "hello@healthsage.ai" }
]

maintainers = [
  {name = "HealthSage AI", email = "hello@healthsage.ai" }
]

classifiers = [  # Optional
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "fhir.resources",
  "pandas",
  "transformers",
  "datasets",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "pydantic==2.5.2",
  "torch",
  "pytorch-gpu",
  "python-dotenv",
  "marko",
  "peft",
  "bitsandbytes",
  "accelerate"
]

[project.urls]
"Homepage" = "https://github.com/healthsageai/healthsageai-note-to-fhir"
"Bug Reports" = "https://github.com/healthsageai/healthsageai-note-to-fhir/issues"
"Source" = "https://github.com/healthsageai/healthsageai-note-to-fhir/"

